# floppy-bat

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
aseprite/: bat.aseprite
assets/aseprite/: obstacle.aseprite
src/: game.c  game.h  main.c  menu.c  obstacles.c  obstacles.h  player.c  player.h
